<resources>
    <string name="app_name">MovieSleuthhound</string>
    <string name="movie_name">Movie Name</string>
    <string name="movie_year">Movie Year</string>
    <string name="search">Search</string>
    <string name="enter_movie_name">Please enter movie name.</string>
    <string name="title">Title:</string>
    <string name="release_date">Release date:</string>
    <string name="genre">Genre:</string>
    <string name="plot">Plot:</string>
    <string name="button_doing_nothing">Button Doing Nothing</string>
</resources>
