<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appMainBackground"
        tools:layout_editor_absoluteY="40dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/movieNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_login_text_input"
            android:hint="@string/movie_name"
            android:textColorHint="@color/mainText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_baseline_local_movies_24"
            app:startIconTint="@color/iconMain">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/movieNameIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_baseline_check_transperent"
                android:inputType="textNoSuggestions"
                android:lines="1"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:textColor="@color/mainText"
                android:textColorHint="@color/mainText"
                android:textCursorDrawable="@null" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/movieYearField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_login_text_input"
            android:hint="@string/movie_year"
            android:textColorHint="@color/mainText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieNameField"
            app:startIconDrawable="@drawable/ic_baseline_access_time_24"
            app:startIconTint="@color/iconMain">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/movieYearIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_baseline_check_transperent"
                android:inputType="textNoSuggestions"
                android:lines="1"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:textColor="@color/mainText"
                android:textColorHint="@color/mainText"
                android:textCursorDrawable="@null" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/searchBtn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_action_button"
            android:text="@string/search"
            app:icon="@drawable/ic_baseline_search_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieYearField" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
