<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="movie"
            type="com.vitaz.moviesleuthhound.model.Movie" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/messageHolder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_warning_24"
                app:tint="@color/accent" />

            <TextView
                android:id="@+id/errorMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="24dp"
                android:text="@{movie.error}"
                android:textColor="@color/iconMain"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/movieHolder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingBottom="50dp">

                        <com.facebook.drawee.view.SimpleDraweeView
                            android:id="@+id/moviePoster"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="4dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:placeholderImage="@drawable/ic_baseline_sync_24"
                            app:viewAspectRatio="1" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/titleHolder"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@+id/moviePoster">

                            <View
                                android:id="@+id/horisontalLine"
                                android:layout_width="0dp"
                                android:layout_height="1px"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:background="@color/iconMain"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent" />

                            <TextView
                                android:id="@+id/textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="4dp"
                                android:layout_marginBottom="4dp"
                                android:text="@string/title"
                                android:textColor="@color/mainText"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/titleText"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="4dp"
                                android:layout_marginEnd="16dp"
                                android:layout_marginBottom="4dp"
                                android:gravity="end"
                                android:text="@{movie.title}"
                                android:textColor="@color/iconMain"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/textView"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:text="TextView" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/releaseDateHolder"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@+id/titleHolder">

                            <View
                                android:id="@+id/horisontalLine2"
                                android:layout_width="0dp"
                                android:layout_height="1px"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:background="@color/iconMain"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent" />

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="4dp"
                                android:layout_marginBottom="4dp"
                                android:text="@string/release_date"
                                android:textColor="@color/mainText"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/titleText2"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="4dp"
                                android:layout_marginEnd="16dp"
                                android:layout_marginBottom="4dp"
                                android:gravity="end"
                                android:text="@{movie.released}"
                                android:textColor="@color/iconMain"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/textView2"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:text="TextView" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/genreHolder"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@+id/releaseDateHolder">

                            <View
                                android:id="@+id/horisontalLine3"
                                android:layout_width="0dp"
                                android:layout_height="1px"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:background="@color/iconMain"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent" />

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="4dp"
                                android:layout_marginBottom="4dp"
                                android:text="@string/genre"
                                android:textColor="@color/mainText"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/titleText3"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="4dp"
                                android:layout_marginEnd="16dp"
                                android:layout_marginBottom="4dp"
                                android:gravity="end"
                                android:text="@{movie.genre}"
                                android:textColor="@color/iconMain"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/textView3"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:text="TextView" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/plotHolder"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@+id/genreHolder">

                            <View
                                android:id="@+id/horisontalLine4"
                                android:layout_width="0dp"
                                android:layout_height="1px"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:background="@color/iconMain"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent" />

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="4dp"
                                android:layout_marginBottom="4dp"
                                android:text="@string/plot"
                                android:textColor="@color/mainText"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/titleText4"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="4dp"
                                android:layout_marginEnd="16dp"
                                android:layout_marginBottom="4dp"
                                android:gravity="end"
                                android:justificationMode="inter_word"
                                android:text="@{movie.plot}"
                                android:textColor="@color/iconMain"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/textView4"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:text="TextView" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/showDialogBtn"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_button_up"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/iconMain"
            app:srcCompat="@drawable/ic_baseline_keyboard_arrow_up_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>